# homelab-node-red-backup

./: .conform.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: codeql.yml  dependency_review.yml  release.yml  scorecard.yml  verify.yml
homelab_node_red_backup/: __init__.py  __main__.py
homelab_node_red_backup/handler/: __init__.py  backup.py  check.py  flows.py  restore.py
tests/: test_main.py
tests/handler/: test_backup.py  test_check.py  test_flows.py  test_restore.py
