[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "homelab-node-red-backup"
version = "2.1.0"
description = "Backup and Restore for Node-RED."
license = "MIT"
authors = [
    "Daniel Muehlbachler-Pietrzykowski <daniel.muehlbachler@niftyside.io>"
]
readme = "README.md"
repository = "https://github.com/muhlba91/onyx-client"
keywords = [
    "node-red",
    "homelab"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation"
]

[tool.poetry.scripts]
homelab-node-red-backup = "homelab_node_red_backup.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pre-commit = "^4.0.0"
ruff = "^0.12.0"
