[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "homelab-node-red-backup"
version = "2.1.0"
description = "Backup and Restore for Node-RED."
license = "MIT"
authors = [
    "Daniel Muehlbachler-Pietrzykowski <daniel.muehlbachler@niftyside.io>",
]
readme = "README.md"
repository = "https://github.com/muhlba91/homelab-node-red-backup"
keywords = ["node-red", "homelab"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

[tool.poetry.scripts]
homelab-node-red-backup = "homelab_node_red_backup.__main__:main"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
click = "^8.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = { extras = ["toml"], version = "^7.0.0" }
coverage = { extras = ["toml"], version = "^7.0.0" }
pre-commit = "^4.0.0"
ruff = "^0.15.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --cov=homelab_node_red_backup"
testpaths = ["tests"]
norecursedirs = [".git"]

[tool.coverage.run]
relative_files = true
source = ["homelab_node_red_backup"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplemented()",
    "if __name__ == .__main__.:",
    "main()",
    "parser\\..",
    "argparse\\..",
]
fail_under = 95
show_missing = true
